# project-admin/internal/handler/ApplicationInfo/deleteHandler.go
@@ -1,0 +1,35 @@
+package ApplicationInfo
+
+import (
+	"net/http"
+
+	"github.com/zeromicro/go-zero/rest/httpx"
+	"project-admin/project-admin/internal/logic/ApplicationInfo"
+	"project-admin/project-admin/internal/svc"
+	"project-admin/project-admin/internal/types"
+
+	"project-admin/common/result"
+)
+
+func DeleteHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.DeleteReq
+
+		if err := httpx.Parse(r, &req); err != nil {
+			// httpx.Error(w, err)
+			result.ParamErrorResult(r, w, err)
+			return
+		}
+
+		l := ApplicationInfo.NewDeleteLogic(r.Context(), svcCtx)
+		err := l.Delete(&req)
+		/*
+			if err != nil {
+				httpx.Error(w, err)
+			} else {
+				httpx.Ok(w)
+			}
+		*/
+		result.HttpResult(r, w, err, nil)
+	}
+}
