# project-admin/internal/handler/ApplicationInfo/getHandler.go
@@ -1,0 +1,35 @@
+package ApplicationInfo
+
+import (
+	"net/http"
+
+	"github.com/zeromicro/go-zero/rest/httpx"
+	"project-admin/project-admin/internal/logic/ApplicationInfo"
+	"project-admin/project-admin/internal/svc"
+	"project-admin/project-admin/internal/types"
+
+	"project-admin/common/result"
+)
+
+func GetHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.GetReq
+
+		if err := httpx.Parse(r, &req); err != nil {
+			// httpx.Error(w, err)
+			result.ParamErrorResult(r, w, err)
+			return
+		}
+
+		l := ApplicationInfo.NewGetLogic(r.Context(), svcCtx)
+		resp, err := l.Get(&req)
+		/*
+			if err != nil {
+				httpx.Error(w, err)
+			} else {
+				httpx.OkJson(w, resp)
+			}
+		*/
+		result.HttpResult(r, w, err, resp)
+	}
+}
